--- a/style.css
+++ b/style.css
@@ -324,8 +324,8 @@ a:hover {
 }
 
 .navbar .nav {
-    padding-top: 2px;
-    margin-right: -16px;
+    padding-top: 1em;
+    margin-right: -10em;
     float: right;
     z-index: 1;
 }
@@ -437,13 +437,18 @@ nav .caret {
 }
 .img-responsive {
     height: auto;
-    width: 100%;
+    max-height: 100%;
+    width: auto;
+    max-width: 100%;
 }
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
 }
 
+.navbar-header {
+    display: flex;
+}
 .mg-lg {
     margin-top: 10px;
     margin-bottom: 40px;
@@ -837,7 +842,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere.jpg");
+    background-image: url("img/images-compressées/la-chouette-agence-banniere-min.jpg");
 }
 
 .bg-presentation {
@@ -891,10 +896,7 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+    
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -903,8 +905,6 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
     }
 }
 
